--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,14 +29,14 @@ file(GLOB_RECURSE SOURCE_FILES
 add_library(lib_tile_level_loader STATIC ${SOURCE_FILES})
 target_include_directories(lib_tile_level_loader INTERFACE
 		"${CMAKE_SOURCE_DIR}/lib_tile_level_loader/" PUBLIC ${SFML_INCS})
-target_link_libraries(lib_tile_level_loader lib_maths sfml-graphics)
+target_link_libraries(lib_tile_level_loader sfml-graphics)
 
 #### Maths lib ####
 add_library(lib_maths INTERFACE)
 target_sources(lib_maths INTERFACE
 	"${CMAKE_SOURCE_DIR}/lib_maths/maths.h")
 target_include_directories(lib_maths INTERFACE
-	"${CMAKE_SOURCE_DIR}/lib_maths" SYSTEM INTERFACE ${SFML_INCS})
+	"${CMAKE_SOURCE_DIR}/lib_maths/" SYSTEM INTERFACE ${SFML_INCS})
 
 #### Practical 1 ####
 file(GLOB_RECURSE SOURCES practical_1/*.cpp practical_1/*.h)
@@ -64,7 +64,7 @@ set_target_properties(PRACTICAL_2 PROPERTIES
 file(GLOB_RECURSE SOURCES practical_3/*.cpp practical_3/*.h)
 add_executable(PRACTICAL_3 ${SOURCES})
 target_include_directories(PRACTICAL_3 PRIVATE ${SFML_INCS})
-target_link_libraries(PRACTICAL_3 lib_tile_level_loader sfml-graphics)
+target_link_libraries(PRACTICAL_3 lib_maths lib_tile_level_loader  sfml-graphics)
 add_dependencies(PRACTICAL_3 copy_resources)
 set_target_properties(PRACTICAL_3 PROPERTIES
 	VS_DEBUGGER_WORKING_DIRECTORY
