Package name change test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ ELSE()
   set(CPACK_GENERATOR ZIP)
 ENDIF(WIN32)
 
-
+set(CPACK_PACKAGE_NAME "Test Name")
 set(CPACK_PACKAGE_FILE_NAME ${CMAKE_PROJECT_NAME})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "set09119")
 set(CPACK_PACKAGE_VENDOR "Edinburgh Napier University")
