--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ ELSE()
   set(CPACK_GENERATOR ZIP)
 ENDIF(WIN32)
 
-set(CPACK_PACKAGE_NAME "Test Name")
+set(CPACK_PACKAGE_NAME "Adam's Labs")
 set(CPACK_PACKAGE_FILE_NAME ${CMAKE_PROJECT_NAME})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "set09119")
 set(CPACK_PACKAGE_VENDOR "Edinburgh Napier University")
@@ -191,7 +191,7 @@ find_file (LICENSE NAMES LICENSE LICENSE.txt PATHS  "${CMAKE_SOURCE_DIR}/../" "$
 if(${LICENSE})
   set(CPACK_RESOURCE_FILE_LICENSE ${LICENSE})
 endif(${LICENSE})
-set(CPACK_PACKAGE_VERSION_MAJOR "0")
+set(CPACK_PACKAGE_VERSION_MAJOR "v0")
 set(CPACK_PACKAGE_VERSION_MINOR "1")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
 
